--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-image-picker": "^4.10.3",
     "react-native-text-recognition": "^1.0.0",
     "react-native-translator": "^1.1.3",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.26.0"
   },
   "devDependencies": {
