--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
     "axios": "^1.2.1",
     "deprecated-react-native-prop-types": "^2.2.0",
     "react": "18.1.0",
@@ -17,6 +19,8 @@
     "react-native-camera": "^4.2.1",
     "react-native-canvas": "^0.1.38",
     "react-native-image-picker": "^4.10.3",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-text-recognition": "^1.0.0",
     "react-native-translator": "^1.1.3",
     "react-native-vector-icons": "^9.2.0",
